samples/_failures_safe/1761403426_195f15_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_303962bd.c: In function ‘main’:
./samples/SAFE/__tmp_303962bd.c:151:5: error: expected declaration or statement at end of input
  151 |     } else {
      |     ^
./samples/SAFE/__tmp_303962bd.c:151:5: error: expected declaration or statement at end of input
